# salesFAQBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
backend/: bm25_search.py  corpus_builder.py  embedding.py  hybrid_rrf_search.py  index_builder.py  main.py  pipeline.py  server.py  testBM25.py  vecSearch.py
backend/db/: meta.json
backend/db/collection/FAQ/: storage.sqlite
backend/embedder/: base_embedder.py  bge_embedder.py
backend/knowledgeDoc/: FAQ_eval.xlsx  nonFAQ_eval.xlsx  知識文件蒐集_20251031.xlsx
backend/utils/: database.py  download.py  responseAPI.py
config/: config.yaml
core/: init.py
core/database/: database_builder.py  index_builder.py
core/embedder/: aoai_embedder.py  base_embedder.py  bge_embedder.py  bm25.py  ckip_tokenizer.py  sentence_transformer_embedder.py
core/init/: builder.py  database.py  index_builder.py  init.py
core/reranker/: base_reranker.py  reranker.py  sentence_transformer_reranker.py
core/response/: aoai.py  geminiAPI.py  prompt.py  responseAPI.py
core/retrieve/: bm25_search.py  dense_search.py  rerank_search.py
frontend/: index.html
knowledgeDoc/: nonFAQ_20251114.xlsx  知識文件蒐集_20251027.xlsx  知識文件蒐集_20260114.xlsx
static/css/: style.css
static/js/: script.js
template/: index.html
test/: test_bm25.py  test_reranker.py  test_response.py
utils/: BM25.py  corpus.py  database.py  denseVec.py  download.py
